@@ -1,3 +1,7 @@
+2007-10-10  Maximilien Cuony
+    * Add version number in options
+    * Fixed a probable bug in update system.
+
 2007-10-09  Maximilien Cuony
     * Sorting key's list by name
 
